--- a/home.html
+++ b/home.html
@@ -36,6 +36,14 @@
 
 <div class="bg-color-18">
 	<div class="container py-5">
-		<div class="row mt-md-4" id="tokens-container"></div>
+		<div class="row mt-md-4" id="tokens-container">
+			<div class="d-flex justify-content-center">
+				<div class="py-5 mb-4">
+					<div class="spinner-grow" style="width: 4rem; height: 4rem;" role="status">
+						<span class="visually-hidden">Loading...</span>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
