--- a/home.html
+++ b/home.html
@@ -38,10 +38,12 @@
 	<div class="container py-5">
 		<div class="row mt-md-4" id="tokens-container">
 			<div class="d-flex justify-content-center">
-				<div class="py-5 mb-4">
-					<div class="spinner-grow" style="width: 4rem; height: 4rem;" role="status">
+				<div class="py-5 mb-4 text-center">
+					<div class="spinner-grow mb-4" style="width: 4rem; height: 4rem;" role="status">
 						<span class="visually-hidden">Loading...</span>
 					</div>
+					
+					<div>Make sure to point your wallet on Binance Smart Chain Network.</div>
 				</div>
 			</div>
 		</div>
