--- a/token.html
+++ b/token.html
@@ -8,28 +8,59 @@
 		</div>
 		
 		<div class="col-md-6 col-xll-7 ps-lg-3 ps-xl-4 mt-4 mt-md-5">
+			<div class="alert alert-info mb-5" id="point-to-bscnetwork-message">
+				<div class="d-flex align-items-center">
+					<div class="pe-3">
+						<i class="fas fa-exclamation-circle font-size-130"></i>
+					</div>
+					<div class="flex-fill font-size-90">Make sure to point your wallet on Binance Smart Chain Network.</div>
+				</div>
+			</div>
+			
 			<div class="neo-black font-size-200 font-size-md-250 mb-1" id="token-name"></div>
 			<div class="font-size-110 neo-bold mb-4 pb-1">#1 of 1 - Single Edition</div>
 			
-			<div class="row align-items-center d-none mb-4">
+			<div class="row align-items-center d-none mb-4" id="create-market-sale-container">
 				<div class="col-6">
-					<div class="font-size-200 font-size-md-250 neo-black" id="token-price"></div>
+					<div class="font-size-200 font-size-md-250 neo-black token-price"></div>
 				</div>
 				<div class="col-6 text-end">
 					<button class="btn btn-custom-2 font-size-110 font-size-md-120 neo-bold px-4 px-md-5 link create-market-sale-confirmation" style="border-radius:15px">OWN NOW</button>
 				</div>
 			</div>
 			
-			<div class="row align-items-center d-none mb-4">
+			<div class="row align-items-center d-none mb-4" id="cancel-market-item-container">
+				<div class="col-6">
+					<div class="font-size-200 font-size-md-250 neo-black token-price"></div>
+				</div>
+				<div class="col-6 text-end">
+					<button class="btn btn-custom-3 font-size-110 font-size-md-120 neo-bold px-4 px-md-5 link cancel-market-item-confirmation" style="border-radius:15px">CANCEL</button>
+				</div>
+			</div>
+			
+			<div class="row align-items-center d-none mb-4" id="create-market-item-container">
 				<div class="col-6">
 					<div>
-						<a href="#" target="_blank" class="font-size-90 text-decoration-none d-none" id="token-bscscan-transaction-hash">View on BscScan</a>
+						<a href="#" target="_blank" class="font-size-90 text-decoration-none d-none token-bscscan-transaction-hash">View on BscScan</a>
 					</div>
 					<div class="font-size-100 neo-bold">Owner</div>
 					<div class="font-size-90 owner-address"></div>
 				</div>
 				<div class="col-6">
-					<div class="w-100 font-size-100 font-size-md-120 text-center neo-bold link" style="border-radius:5px; background-color:#e1e3e3; border-color:#c7c9c9; padding-top:6px; padding-bottom:6px; line-height:1.5">SOLD OUT</div>
+					<button class="btn btn-custom-4 w-100 font-size-100 font-size-md-120 neo-bold create-market-item-confirmation" style="border-radius:15px">SELL NOW</button>
+				</div>
+			</div>
+			
+			<div class="row align-items-center d-none mb-4" id="sold-out-container">
+				<div class="col-6">
+					<div>
+						<a href="#" target="_blank" class="font-size-90 text-decoration-none d-none token-bscscan-transaction-hash">View on BscScan</a>
+					</div>
+					<div class="font-size-100 neo-bold">Owner</div>
+					<div class="font-size-90 owner-address"></div>
+				</div>
+				<div class="col-6">
+					<div class="w-100 font-size-100 font-size-md-120 text-center neo-bold sold-out-label" style="border-radius:5px; background-color:#e1e3e3; border-color:#c7c9c9; padding-top:6px; padding-bottom:6px; line-height:1.5">SOLD OUT</div>
 				</div>
 			</div>
 			
