Add transfer history to token view

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<link rel="stylesheet" href="js/alertifyjs/css/alertify.min.css" />
 	<link rel="stylesheet" href="js/alertifyjs/css/themes/default.min.css" />
 	<link rel="stylesheet" href="js/fancybox/fancybox.css" />
-	<link rel="stylesheet" href="css/style.css?v=16">
+	<link rel="stylesheet" href="css/style.css?v=17">
 </head>
 <body>
 	<div style="overflow-x:hidden">
@@ -297,6 +297,8 @@
 	<script src="js/alertifyjs/alertify.min.js"></script>
 	<script src="js/ellipsis.min.js"></script>
 	<script src="js/fancybox/fancybox.umd.js"></script>
-	<script src="js/script.js?v=49" id="script"></script>
+	<script src="js/moment.js"></script>
+	<script src="js/blockies.js"></script>
+	<script src="js/script.js?v=50" id="script"></script>
 </body>
 </html>
