--- a/token.html
+++ b/token.html
@@ -144,9 +144,20 @@
 									<td class="py-1" id="token-owner"></td>
 								</tr>
 							</table>
-							
-							<div class="mt-2">
-								<a href="#" target="_blank" class="btn btn-custom-2 px-4" id="token-bscscan-link">View on BscScan</a>
+						</div>
+					</div>
+				</div>
+				
+				<div class="accordion-item">
+					<h2 class="accordion-header" id="headingFive">
+						<button class="accordion-button neo-bold font-size-60 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+							Transfer History
+						</button>
+					</h2>
+					<div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive">
+						<div class="accordion-body">
+							<div class="table-responsive py-2">
+								<table class="table table-bordered font-size-80 mb-0" id="transfer-history"></table>
 							</div>
 						</div>
 					</div>
