Add custom routes for each titan and inkvadyrz tokens

--- a/token.html
+++ b/token.html
@@ -150,11 +150,11 @@
 				
 				<div class="accordion-item">
 					<h2 class="accordion-header" id="headingFive">
-						<button class="accordion-button neo-bold font-size-60 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+						<button class="accordion-button neo-bold font-size-60" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
 							Transfer History
 						</button>
 					</h2>
-					<div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive">
+					<div id="collapseFive" class="accordion-collapse collapse show" aria-labelledby="headingFive">
 						<div class="accordion-body">
 							<div class="table-responsive py-2">
 								<table class="table table-bordered font-size-80 mb-0" id="transfer-history"></table>
