--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
 	<link rel="stylesheet" href="js/alertifyjs/css/themes/default.min.css" />
 	<link rel="stylesheet" href="js/fancybox/fancybox.css" />
 	<link rel="stylesheet" href="css/style.css?v=17">
+	
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-6LBV47LFR4"></script>
+	<script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-6LBV47LFR4');
+	</script>
 </head>
 <body>
 	<div style="overflow-x:hidden">
@@ -299,6 +308,6 @@
 	<script src="js/fancybox/fancybox.umd.js"></script>
 	<script src="js/moment.js"></script>
 	<script src="js/blockies.js"></script>
-	<script src="js/script.js?v=51" id="script"></script>
+	<script src="js/script.js?v=52" id="script"></script>
 </body>
 </html>
