--- a/home.html
+++ b/home.html
@@ -9,12 +9,12 @@
 	<div class="bg-white position-absolute h-100 d-none d-lg-block" style="top:0; left:70%; width:30%; z-index:-1"></div>
 	
 	<div class="container">
-		<div class="d-flex w-100 py-5" style="min-height:calc(100vh - 80px)">
+		<div class="d-flex w-100 py-4" style="min-height:calc(100vh - 80px)">
 			<div id="banner-left" style="">
 				<div class="d-flex flex-column justify-content-center h-100">
 					<div class="text-color-9 alegreya-italic font-size-160 font-size-md-200 mb-4"><span class="alegreya-bold-italic">OWNLY</span> PRESENTS</div>
-					<div class="text-white neo-bold font-size-360 font-size-md-500 line-height-90 mb-2">TITANS of<br>INDUSTRY</div>
-					<div class="position-relative mb-3 mb-md-5 pb-5">
+					<div class="text-white neo-bold font-size-360 font-size-md-470 font-size-xl-500 line-height-90 mb-2">TITANS of<br>INDUSTRY</div>
+					<div class="position-relative mb-3 mb-md-5 pb-4">
 						<div class="bg-color-19 neo-black text-color-6 font-size-160 font-size-md-200 py-2">by Eugene Oligo</div>
 						<div class="bg-color-19 neo-black text-color-6 font-size-160 font-size-md-200 py-2 position-absolute w-100" style="top:0; left:-99%; z-index:-1">&nbsp;</div>
 						<div class="bg-color-19 neo-black text-color-6 font-size-160 font-size-md-200 py-2 position-absolute w-100" style="top:0; right:-99%; z-index:-1">&nbsp;</div>
@@ -28,7 +28,7 @@
 			</div>
 			
 			<div class="d-none d-lg-block py-2" id="banner-right" style="">
-				<div class="background-image-contain" style="background-image:url('img/bg/Marketplace_Banner2.webp'); height:calc(100% + 30px); width:calc(100% + 200px); z-index:99"></div>
+				<div class="background-image-contain" style="background-image:url('img/bg/Marketplace_Banner2.webp'); height:calc(100% + 20px); width:calc(100% + 200px); z-index:99"></div>
 			</div>
 		</div>
 	</div>
