--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<link rel="stylesheet" href="js/alertifyjs/css/alertify.min.css" />
 	<link rel="stylesheet" href="js/alertifyjs/css/themes/default.min.css" />
 	<link rel="stylesheet" href="js/fancybox/fancybox.css" />
-	<link rel="stylesheet" href="css/style.css?v=17">
+	<link rel="stylesheet" href="css/style.css?v=18">
 	
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-6LBV47LFR4"></script>
 	<script>
@@ -71,14 +71,9 @@
 					</button>
 					<div class="collapse navbar-collapse" id="navbarSupportedContent" style="flex-grow:initial">
 						<ul class="navbar-nav mb-2 mb-lg-0">
-							<li class="nav-item" id="account-address"></li>
-							
-<!--							<li class="nav-item dropdown">-->
-<!--								<a class="nav-link dropdown-toggle text-color-6" href="#" id="account-address" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>-->
-<!--								<ul class="dropdown-menu" aria-labelledby="account-address">-->
-<!--									<li><a class="dropdown-item" href="#">My Collections</a></li>-->
-<!--								</ul>-->
-<!--							</li>-->
+							<li class="nav-item">
+								<a class="text-color-6 text-decoration-none" href="#" id="account-address"></a>
+							</li>
 							
 							<li class="nav-item" id="connect-to-metamask-container">
 								<button type="button" class="btn btn-custom-9 shadow-sm font-size-90 py-2 px-4" id="connect-to-metamask" style="border-radius:100px">Connect Wallet</button>
@@ -296,6 +291,22 @@
 					</div>
 				</div>
 			</div>
+			
+			<div class="modal fade" id="modal-success" tabindex="-1">
+				<div class="modal-dialog modal-dialog-centered modal-sm">
+					<div class="modal-content">
+						<div class="modal-body">
+							<div class="text-center mt-3 mb-3">
+								<i class="fas fa-check-circle font-size-400 text-color-3"></i>
+							</div>
+							<h5 class="w-100 font-size-100 text-center message"></h5>
+						</div>
+						<div class="modal-footer justify-content-center">
+							<button type="button" class="btn btn-custom-2 px-4" data-bs-dismiss="modal">Okay</button>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 	
@@ -307,7 +318,7 @@
 	<script src="js/ellipsis.min.js"></script>
 	<script src="js/fancybox/fancybox.umd.js"></script>
 	<script src="js/moment.js"></script>
-	<script src="js/blockies.js"></script>
-	<script src="js/script.js?v=54" id="script"></script>
+	<script src="https://cdn.jsdelivr.net/npm/jdenticon@3.1.0/dist/jdenticon.min.js" async integrity="sha384-VngWWnG9GS4jDgsGEUNaoRQtfBGiIKZTiXwm9KpgAeaRn6Y/1tAFiyXqSzqC8Ga/" crossorigin="anonymous"></script>
+	<script src="js/script.js?v=55" id="script"></script>
 </body>
 </html>
