--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
 		<div class="row mt-md-4" id="tokens-container">
 			<div class="d-flex justify-content-center">
 				<div class="py-5 mb-4 text-center">
-					<div class="spinner-grow mb-4" style="width: 4rem; height: 4rem;" role="status">
+					<div class="spinner-grow background-image-cover bg-transparent mb-4" style="width:6rem; height:6rem; background-image:url('img/ownly/own-token.png')" role="status">
 						<span class="visually-hidden">Loading...</span>
 					</div>
 					
