--- a/token.html
+++ b/token.html
@@ -17,12 +17,37 @@
 				</div>
 			</div>
 			
-			<div class="neo-black font-size-200 font-size-md-250 mb-1" id="token-name"></div>
+			<div class="d-flex justify-content-between">
+				<div class="d-flex align-items-center mb-1" style="min-height:61px">
+					<div class="neo-black font-size-200 font-size-md-250 mb-1 token-name link text-color-6 text-decoration-none" id="token-name"></div>
+				</div>
+				<div class="d-flex align-items-center py-1 ps-3 add-to-favorites-container">
+					<div class="">
+						<button class="btn add-to-favorites p-0 m-0" data-status="0" style="width:24px; height:24px; border-radius:50%; box-shadow: none" disabled>
+							<i class="far fa-heart font-size-140 text-color-1"></i>
+						</button>
+					</div>
+					<div class="ps-2 font-size-90 text-color-1 favorites-count">0</div>
+				</div>
+			</div>
+			
 			<div class="font-size-110 neo-bold mb-4 pb-1">#1 of 1 - Single Edition</div>
 			
-			<div class="row align-items-center d-none mb-4" id="create-market-sale-container">
+			<div class="pb-3 text-center" id="token-loading">
+				<div class="spinner-grow background-image-cover bg-transparent mb-4" style="width:4rem; height:4rem; background-image:url('img/ownly/own-token.png')" role="status">
+					<span class="visually-hidden">Loading...</span>
+				</div>
+			</div>
+			
+			<div class="row align-items-center d-none mb-5" id="create-market-sale-container">
 				<div class="col-6">
-					<div class="font-size-200 font-size-md-250 neo-black token-price"></div>
+					<div class="d-flex align-items-end mb-2">
+						<div class="font-size-110 font-size-md-120 fw-bold">Price:</div>
+						<div class="ps-2 ms-1">
+							<img src="img/ownly/own-token.png" class="token-price-currency" width="30" />
+						</div>
+					</div>
+					<div class="font-size-200 font-size-md-250 neo-black token-price line-height-90"></div>
 				</div>
 				<div class="col-6 text-end">
 					<button class="btn btn-custom-2 font-size-110 font-size-md-120 neo-bold px-4 px-md-5 link create-market-sale-confirmation" style="border-radius:15px">OWN NOW</button>
@@ -31,6 +56,12 @@
 			
 			<div class="row align-items-center d-none mb-4" id="cancel-market-item-container">
 				<div class="col-6">
+					<div class="d-flex align-items-end mb-2">
+						<div class="font-size-110 font-size-md-120 fw-bold">Price:</div>
+						<div class="ps-2 ms-1">
+							<img src="img/ownly/own-token.png" class="token-price-currency" width="30" />
+						</div>
+					</div>
 					<div class="font-size-200 font-size-md-250 neo-black token-price"></div>
 				</div>
 				<div class="col-6 text-end">
