Add Mustachios collection

--- a/home.html
+++ b/home.html
@@ -36,6 +36,17 @@
 
 <div class="bg-color-18">
 	<div class="container py-5">
+		<div class="px-md-1 mb-5">
+			<ul class="nav nav-pills nav-pills-custom-1 nav-justified">
+				<li class="nav-item mx-md-2">
+					<a href="?collection=titans-of-industry" class="nav-link collection-tab py-3 font-size-120 text-center h-100 d-flex align-items-center justify-content-center" data-collection="titans-of-industry">TITANS OF INDUSTRY</a>
+				</li>
+				<li class="nav-item mx-md-2">
+					<a href="?collection=the-mustachios" class="nav-link collection-tab py-3 font-size-120 text-center h-100 d-flex align-items-center justify-content-center" data-collection="the-mustachios">THE MUSTACHIOS</a>
+				</li>
+			</ul>
+		</div>
+		
 		<div class="row mt-md-4" id="tokens-container">
 			<div class="d-flex justify-content-center">
 				<div class="py-5 mb-4 text-center">
@@ -43,7 +54,7 @@
 						<span class="visually-hidden">Loading...</span>
 					</div>
 					
-					<div>Make sure to point your wallet on Binance Smart Chain Network.</div>
+					<div>Loading Collection</div>
 				</div>
 			</div>
 		</div>
