--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<link rel="stylesheet" href="js/alertifyjs/css/alertify.min.css" />
 	<link rel="stylesheet" href="js/alertifyjs/css/themes/default.min.css" />
 	<link rel="stylesheet" href="js/fancybox/fancybox.css" />
-	<link rel="stylesheet" href="css/style.css?v=19">
+	<link rel="stylesheet" href="css/style.css?v=20">
 	
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-6LBV47LFR4"></script>
 	<script>
@@ -56,8 +56,8 @@
 									<div class="d-flex align-items-center">
 										<div class="font-size-150 font-size-sm-200 rubik-black website-home-link line-height-90">OWNLY</div>
 										<div class="bg-color-6 text-center text-white py-1 px-2 ms-2">
-											<div class="font-size-60 font-size-sm-70 rubik-bold line-height-100">1.0.0</div>
-											<div class="font-size-60 font-size-sm-50 rubik-regular line-height-100">ALPHA</div>
+											<div class="font-size-60 font-size-sm-70 rubik-bold line-height-100">2.0.0</div>
+											<div class="font-size-60 font-size-sm-50 rubik-regular line-height-100">BETA</div>
 										</div>
 									</div>
 									<div class="font-size-70 font-size-sm-93 rubik-bold line-height-90">MARKETPLACE</div>
@@ -171,14 +171,14 @@
 			</div>
 			
 			<div class="modal fade" id="modal-approve" tabindex="-1">
-				<div class="modal-dialog modal-dialog-centered">
+				<div class="modal-dialog modal-dialog-centered modal-sm">
 					<div class="modal-content">
-						<div class="modal-header">
-							<h5 class="modal-title">Post Item For Sale</h5>
-							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-						</div>
 						<div class="modal-body">
-							<div>This will give Ownly Marketplace an access to transfer your token once sold.</div>
+							<div class="text-center mt-3 mb-3">
+								<i class="fas fa-store font-size-400 text-color-3"></i>
+							</div>
+							<h5 class="w-100 fw-bold font-size-120 text-center text-color-3">Post Item For Sale</h5>
+							<h5 class="w-100 font-size-100 text-center">This will give Ownly Marketplace an access to transfer your token once sold.</h5>
 						</div>
 						<div class="modal-footer">
 							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
@@ -191,12 +191,12 @@
 			<div class="modal fade" id="modal-create-market-item" tabindex="-1">
 				<div class="modal-dialog modal-dialog-centered modal-sm">
 					<div class="modal-content">
-						<div class="modal-header">
-							<h5 class="modal-title">Set Token Price</h5>
-							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-						</div>
 						<div class="modal-body">
-							<small>Price</small>
+							<div class="text-center mt-3 mb-3">
+								<i class="fas fa-tag font-size-400 text-color-3"></i>
+							</div>
+							<h5 class="w-100 font-size-120 fw-bold text-center text-color-3 mb-4">Set Token Price</h5>
+							
 							<div class="input-group mb-3">
 								<input type="number" class="form-control" name="price" id="price" placeholder="Enter price">
 								<button class="btn btn-outline-secondary dropdown-toggle d-flex align-items-center" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="price-currency" value="OWN">
@@ -220,7 +220,7 @@
 								</ul>
 							</div>
 						</div>
-						<div class="modal-footer justify-content-center">
+						<div class="modal-footer">
 							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
 							<button type="button" class="btn btn-custom-2" id="create-market-item">Submit</button>
 						</div>
@@ -247,13 +247,15 @@
 			</div>
 			
 			<div class="modal fade" id="modal-no-metamask-installed" tabindex="-1">
-				<div class="modal-dialog modal-dialog-centered">
+				<div class="modal-dialog modal-dialog-centered modal-sm">
 					<div class="modal-content">
-						<div class="modal-header">
-							<h5 class="modal-title">Metamask is currently not installed</h5>
-							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+						<div class="modal-body">
+							<div class="text-center mt-3 mb-3">
+								<img src="img/logo/metamask.webp" width="120" />
+							</div>
+							<h5 class="w-100 font-size-100 text-center">Metamask is currently not installed</h5>
 						</div>
-						<div class="modal-footer justify-content-center">
+						<div class="modal-footer">
 							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
 							<a href="https://metamask.io/download.html" target="_blank" class="btn btn-custom-2" id="install-metamask">Install Metamask</a>
 						</div>
@@ -284,7 +286,7 @@
 							<div class="text-center mt-3 mb-3">
 								<i class="fas fa-exclamation-circle font-size-400 text-color-3"></i>
 							</div>
-							<h5 class="w-100 font-size-100 text-center">You are current on the wrong network!</h5>
+							<h5 class="w-100 font-size-100 text-center">You are currently on the wrong network!</h5>
 						</div>
 						<div class="modal-footer justify-content-center">
 							<button type="button" class="btn btn-secondary px-4" data-bs-dismiss="modal">Okay</button>
@@ -300,7 +302,7 @@
 							<div class="text-center mt-3 mb-3">
 								<i class="fas fa-exclamation-circle font-size-400 text-color-4"></i>
 							</div>
-							<h5 class="w-100 font-size-100 text-center">Are you sure you want to cancel this market item?</h5>
+							<h5 class="w-100 font-size-100 text-center">Are you sure you want to cancel your item for sale?</h5>
 						</div>
 						<div class="modal-footer justify-content-center">
 							<button type="button" class="btn btn-secondary px-4" data-bs-dismiss="modal">Cancel</button>
@@ -326,15 +328,31 @@
 				</div>
 			</div>
 			
+			<div class="modal fade" id="modal-error" tabindex="-1">
+				<div class="modal-dialog modal-dialog-centered modal-sm">
+					<div class="modal-content">
+						<div class="modal-body">
+							<div class="text-center mt-3 mb-3">
+								<i class="fas fa-exclamation-circle font-size-400 text-color-1"></i>
+							</div>
+							<h5 class="w-100 font-size-100 text-center message"></h5>
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-custom-1 px-4" data-bs-dismiss="modal">Close</button>
+						</div>
+					</div>
+				</div>
+			</div>
+			
 			<div class="modal fade" id="modal-processing" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false">
 				<div class="modal-dialog modal-dialog-centered modal-sm">
-					<div class="modal-content" style="border-radius:3rem">
+					<div class="modal-content">
 						<div class="modal-body">
 							<div class="py-5 text-center">
 								<div class="spinner-grow background-image-cover bg-transparent mb-4" style="width:6rem; height:6rem; background-image:url('img/ownly/own-token.png')" role="status">
 									<span class="visually-hidden">Loading...</span>
 								</div>
-								<h5 class="w-100 font-size-110 text-center message mb-0">Processing</h5>
+								<h5 class="w-100 font-size-120 text-center message mb-0">Processing</h5>
 							</div>
 						</div>
 					</div>
@@ -346,12 +364,11 @@
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.bundle.min.js"></script>
 	<script src="js/web3.min.js?v=3"></script>
-	<script src="js/abi.js?v=13"></script>
 	<script src="js/alertifyjs/alertify.min.js"></script>
 	<script src="js/ellipsis.min.js"></script>
 	<script src="js/fancybox/fancybox.umd.js"></script>
 	<script src="js/moment.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/jdenticon@3.1.0/dist/jdenticon.min.js" async integrity="sha384-VngWWnG9GS4jDgsGEUNaoRQtfBGiIKZTiXwm9KpgAeaRn6Y/1tAFiyXqSzqC8Ga/" crossorigin="anonymous"></script>
-	<script src="js/script.js?v=59" id="script"></script>
+	<script src="js/script.js?v=61" id="script"></script>
 </body>
 </html>
