Update token image cards and add Mustachio header

--- a/home.html
+++ b/home.html
@@ -1,10 +1,4 @@
-<div class="position-relative" style="min-height:calc(100vh - 80px); margin-top:80px; background-position:66% 50%">
-	<div class="position-absolute w-100 bg-color-6" style="top:0; left:0; z-index:99">
-		<div class="container">
-			<div class="text-center text-white font-size-70 font-size-md-90 py-1">MAKE SURE TO POINT YOUR WALLET ON BINANCE SMART CHAIN NETWORK</div>
-		</div>
-	</div>
-	
+<div class="position-relative header-collection d-none" data-collection="titans-of-industry" style="min-height:calc(100vh - 80px); margin-top:80px; background-position:66% 50%">
 	<div class="bg-color-7 position-absolute h-100" style="top:0; left:0; width:100%; z-index:-1"></div>
 	<div class="bg-white position-absolute h-100 d-none d-lg-block" style="top:0; left:70%; width:30%; z-index:-1"></div>
 	
@@ -29,6 +23,16 @@
 			
 			<div class="d-none d-lg-block py-2" id="banner-right" style="">
 				<div class="background-image-contain" style="background-image:url('img/bg/Marketplace_Banner2.webp'); height:calc(100% + 20px); width:calc(100% + 200px); z-index:99"></div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="position-relative header-collection d-none" data-collection="the-mustachios" style="min-height:calc(100vh - 80px); margin-top:80px; background-position:66% 50%">
+	<div class="d-flex w-100 py-4 background-image-cover" style="min-height:calc(100vh - 80px); background-image:url('img/bg/Mustachios_GridBanner02.webp')">
+		<div class="container position-relative">
+			<div class="position-absolute" style="bottom:20px; left:20px">
+				<img src="img/mustachios/mustachios-text.png" class="mustachios-text" />
 			</div>
 		</div>
 	</div>
