Add Inkvadyrz and CryptoSolitaire collections

--- a/home.html
+++ b/home.html
@@ -38,18 +38,28 @@
 	</div>
 </div>
 
+<div class="position-relative header-collection d-none" data-collection="inkvadyrz" style="min-height:calc(100vh - 80px); margin-top:80px; background-position:66% 50%">
+	<div class="d-flex w-100 py-4 background-image-cover" style="min-height:calc(100vh - 80px); background-image:url('img/bg/inkvadyrz.jpg')">
+	</div>
+</div>
+
+<div class="position-relative header-collection d-none" data-collection="cryptosolitaire" style="min-height:calc(100vh - 80px); margin-top:80px; background-position:66% 50%">
+	<div class="d-flex w-100 py-4 background-image-cover" style="min-height:calc(100vh - 80px); background-image:url('img/bg/cryptosolitaire.jpg')">
+	</div>
+</div>
+
 <div class="bg-color-18">
 	<div class="container py-5">
-		<div class="px-md-1 mb-5">
-			<ul class="nav nav-pills nav-pills-custom-1 nav-justified">
-				<li class="nav-item mx-md-2">
-					<a href="?collection=titans-of-industry" class="nav-link collection-tab py-3 font-size-120 text-center h-100 d-flex align-items-center justify-content-center" data-collection="titans-of-industry">TITANS OF INDUSTRY</a>
-				</li>
-				<li class="nav-item mx-md-2">
-					<a href="?collection=the-mustachios" class="nav-link collection-tab py-3 font-size-120 text-center h-100 d-flex align-items-center justify-content-center" data-collection="the-mustachios">THE MUSTACHIOS</a>
-				</li>
-			</ul>
-		</div>
+<!--		<div class="px-md-1 mb-5">-->
+<!--			<ul class="nav nav-pills nav-pills-custom-1 nav-justified">-->
+<!--				<li class="nav-item mx-md-2">-->
+<!--					<a href="?collection=titans-of-industry" class="nav-link collection-tab py-3 font-size-120 text-center h-100 d-flex align-items-center justify-content-center" data-collection="titans-of-industry">TITANS OF INDUSTRY</a>-->
+<!--				</li>-->
+<!--				<li class="nav-item mx-md-2">-->
+<!--					<a href="?collection=the-mustachios" class="nav-link collection-tab py-3 font-size-120 text-center h-100 d-flex align-items-center justify-content-center" data-collection="the-mustachios">THE MUSTACHIOS</a>-->
+<!--				</li>-->
+<!--			</ul>-->
+<!--		</div>-->
 		
 		<div class="row mt-md-4" id="tokens-container">
 			<div class="d-flex justify-content-center">
@@ -62,5 +72,7 @@
 				</div>
 			</div>
 		</div>
+		
+		<div class="d-none" id="pagination-container"></div>
 	</div>
 </div>
