--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<link rel="stylesheet" href="js/alertifyjs/css/alertify.min.css" />
 	<link rel="stylesheet" href="js/alertifyjs/css/themes/default.min.css" />
 	<link rel="stylesheet" href="js/fancybox/fancybox.css" />
-	<link rel="stylesheet" href="css/style.css?v=21">
+	<link rel="stylesheet" href="css/style.css?v=22">
 	
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-6LBV47LFR4"></script>
 	<script>
@@ -69,7 +69,65 @@
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
 					</button>
-					<div class="collapse navbar-collapse" id="navbarSupportedContent" style="flex-grow:initial">
+					<div class="collapse navbar-collapse w-100 justify-content-between" id="navbarSupportedContent" style="flex-grow:initial">
+						<ul class="navbar-nav mb-2 mb-lg-0 ps-lg-3">
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle text-color-6" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">COLLECTIONS</a>
+								<ul class="dropdown-menu px-2" aria-labelledby="navbarDropdown">
+									<li>
+										<a href="http://ownlyio.dev-marketplace.test/?collection=cryptosolitaire" class="dropdown-item collection-dropdown-item py-2" data-collection="cryptosolitaire">
+											<div class="d-flex align-items-center">
+												<div class="pe-2">
+													<img src="img/ownly/own-token.webp" width="22" />
+												</div>
+												<div>CryptoSolitaire</div>
+											</div>
+										</a>
+									</li>
+									<li>
+										<a href="http://ownlyio.dev-marketplace.test/?collection=inkvadyrz" class="dropdown-item collection-dropdown-item py-2" data-collection="inkvadyrz">
+											<div class="d-flex align-items-center">
+												<div class="pe-2">
+													<img src="img/ownly/own-token.webp" width="22" />
+												</div>
+												<div>Inkvadyrz</div>
+											</div>
+										</a>
+									</li>
+<!--									<li>-->
+<!--										<a href="http://ownlyio.dev-marketplace.test/?collection=ownly-rewards"class="dropdown-item collection-dropdown-item py-2" data-collection="ownly-rewards">-->
+<!--											<div class="d-flex align-items-center">-->
+<!--												<div class="pe-2">-->
+<!--													<img src="img/ownly/own-token.webp" width="22" />-->
+<!--												</div>-->
+<!--												<div>Ownly Rewards</div>-->
+<!--											</div>-->
+<!--										</a>-->
+<!--									</li>-->
+									<li>
+										<a href="http://ownlyio.dev-marketplace.test/?collection=the-mustachios" class="dropdown-item collection-dropdown-item py-2" data-collection="the-mustachios">
+											<div class="d-flex align-items-center">
+												<div class="pe-2">
+													<img src="img/ownly/own-token.webp" width="22" />
+												</div>
+												<div>The Mustachios</div>
+											</div>
+										</a>
+									</li>
+									<li>
+										<a href="http://ownlyio.dev-marketplace.test/?collection=titans-of-industry" class="dropdown-item collection-dropdown-item py-2" data-collection="titans-of-industry">
+											<div class="d-flex align-items-center">
+												<div class="pe-2">
+													<img src="img/ownly/own-token.webp" width="22" />
+												</div>
+												<div>Titans of Industry</div>
+											</div>
+										</a>
+									</li>
+								</ul>
+							</li>
+						</ul>
+						
 						<ul class="navbar-nav mb-2 mb-lg-0">
 							<li class="nav-item">
 								<a class="text-color-6 text-decoration-none" href="#" id="account-address"></a>
@@ -369,6 +427,6 @@
 	<script src="js/fancybox/fancybox.umd.js"></script>
 	<script src="js/moment.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/jdenticon@3.1.0/dist/jdenticon.min.js" async integrity="sha384-VngWWnG9GS4jDgsGEUNaoRQtfBGiIKZTiXwm9KpgAeaRn6Y/1tAFiyXqSzqC8Ga/" crossorigin="anonymous"></script>
-	<script src="js/script.js?v=68" id="script"></script>
+	<script src="js/script.js?v=69" id="script"></script>
 </body>
 </html>
