Fix collection links in navbar dropdown

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 										</a>
 									</li>
 <!--									<li>-->
-<!--										<a href="http://ownlyio.dev-marketplace.test/?collection=ownly-rewards"class="dropdown-item collection-dropdown-item py-2" data-collection="ownly-rewards">-->
+<!--										<a href="http://ownlyio.dev-marketplace.test/?collection=ownly-rewards" class="dropdown-item collection-dropdown-item py-2" data-collection="ownly-rewards">-->
 <!--											<div class="d-flex align-items-center">-->
 <!--												<div class="pe-2">-->
 <!--													<img src="img/ownly/own-token.webp" width="22" />-->
@@ -207,7 +207,7 @@
 								<a href="https://t.me/ownlyio" class="text-decoration-none">
 									<i class="fab fa-telegram text-color-4 me-2"></i>
 								</a>
-								<a href="https://discord.gg/cXez8Jz8" class="text-decoration-none">
+								<a href="https://discord.gg/qAyCCMrjww" class="text-decoration-none">
 									<i class="fab fa-discord text-color-4 me-2"></i>
 								</a>
 								<a href="https://github.com/ownlyio" class="text-decoration-none">
@@ -218,6 +218,9 @@
 								</a>
 								<a href="https://web.facebook.com/ownly.io" class="text-decoration-none">
 									<i class="fab fa-facebook text-color-4 me-2"></i>
+								</a>
+								<a href="https://www.reddit.com/r/Ownly/" class="text-decoration-none">
+									<i class="fab fa-reddit text-color-4 me-2"></i>
 								</a>
 								<a href="https://www.instagram.com/ownly.io/" class="text-decoration-none">
 									<i class="fab fa-instagram text-color-4"></i>
@@ -427,6 +430,6 @@
 	<script src="js/fancybox/fancybox.umd.js"></script>
 	<script src="js/moment.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/jdenticon@3.1.0/dist/jdenticon.min.js" async integrity="sha384-VngWWnG9GS4jDgsGEUNaoRQtfBGiIKZTiXwm9KpgAeaRn6Y/1tAFiyXqSzqC8Ga/" crossorigin="anonymous"></script>
-	<script src="js/script.js?v=69" id="script"></script>
+	<script src="js/script.js?v=70" id="script"></script>
 </body>
 </html>
