Updating token page view for Inkvadyrz and CryptoSolitaire

--- a/token.html
+++ b/token.html
@@ -1,21 +1,13 @@
 <div class="container pb-5" style="padding-top:80px">
 	<div class="row mb-5" id="token-card">
-		<div class="col-md-6 col-xll-5 pe-lg-3 pe-xl-4">
+		<div class="col-md-6 col-xxl-5 pe-lg-3 pe-xl-4">
 			<a href="" data-fancybox id="token-original-image">
-				<img src="img/thumbnails/token.webp" class="w-100 border-1 shadow-sm" id="token-image" alt="Token" />
+				<img src="img/thumbnails/token.webp" class="w-100 border-1 shadow-sm" id="token-image" alt="Token" style="border:1px solid #cccccc; background-color:rgba(0,0,0,0.01); border-radius:10px" />
 			</a>
 			<img src="" class="d-none" id="token-original-image-preload" alt="Token" />
 		</div>
 		
-		<div class="col-md-6 col-xll-7 ps-lg-3 ps-xl-4 mt-4 mt-md-5">
-			<div class="alert alert-info mb-5" id="point-to-bscnetwork-message">
-				<div class="d-flex align-items-center">
-					<div class="pe-3">
-						<i class="fas fa-exclamation-circle font-size-130"></i>
-					</div>
-				</div>
-			</div>
-			
+		<div class="col-md-6 col-xxl-7 ps-lg-3 ps-xl-4 mt-4 mt-md-5">
 			<div class="d-flex justify-content-between">
 				<div class="d-flex align-items-center mb-1" style="min-height:61px">
 					<div class="neo-black font-size-200 font-size-md-250 mb-1 token-name link text-color-6 text-decoration-none" id="token-name"></div>
