--- a/home.html
+++ b/home.html
@@ -32,7 +32,12 @@
 	<div class="d-flex w-100 py-4 background-image-cover" style="min-height:calc(100vh - 80px); background-image:url('img/bg/Mustachios_GridBanner02.webp')">
 		<div class="container position-relative">
 			<div class="position-absolute" style="bottom:20px; left:20px">
-				<img src="img/mustachios/mustachios-text.png" class="mustachios-text" />
+				<div class="mb-3">
+					<img src="img/mustachios/mustachios-text.png" class="mustachios-text" />
+				</div>
+				<div class="ps-4">
+					<a href="https://opensea.io/collection/mustachioverse" target="_blank" class="btn btn-custom-2 font-size-150 px-5 py-2" style="border-radius:30px">View on OpenSea</a>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -40,11 +45,27 @@
 
 <div class="position-relative header-collection d-none" data-collection="inkvadyrz" style="min-height:calc(100vh - 80px); margin-top:80px; background-position:66% 50%">
 	<div class="d-flex w-100 py-4 background-image-cover" style="min-height:calc(100vh - 80px); background-image:url('img/bg/inkvadyrz.jpg')">
+		<div class="container position-relative">
+			<div class="position-absolute" style="bottom:20px; left:20px">
+<!--				<div class="mb-3 mb-md-4 text-white bg-color-6 px-4 py-2 font-size-210 font-size-sm-300 font-size-md-400 font-size-lg-450 shadow-sm">Inkvadyrz</div>-->
+				<div class="">
+					<a href="https://opensea.io/collection/ownly?search[stringTraits][0][name]=Artist&search[stringTraits][0][values][0]=Lei%20Melendres" target="_blank" class="btn btn-custom-3 font-size-120 font-size-sm-140 font-size-lg-200 px-4 px-md-5 py-2 shadow-sm" style="border-radius:30px">View on OpenSea</a>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
 
 <div class="position-relative header-collection d-none" data-collection="cryptosolitaire" style="min-height:calc(100vh - 80px); margin-top:80px; background-position:66% 50%">
 	<div class="d-flex w-100 py-4 background-image-cover" style="min-height:calc(100vh - 80px); background-image:url('img/bg/cryptosolitaire.jpg')">
+		<div class="container position-relative">
+			<div class="position-absolute" style="bottom:20px; left:20px">
+<!--				<div class="mb-3 mb-md-4 text-white bg-color-6 px-4 py-2 font-size-210 font-size-sm-300 font-size-md-400 font-size-lg-450 shadow-sm">CryptoSolitaire</div>-->
+				<div class="">
+					<a href="https://opensea.io/collection/ownly?search[stringTraits][0][name]=Artist&search[stringTraits][0][values][0]=Chen%20Naje" target="_blank" class="btn btn-custom-3 font-size-100 font-size-sm-110 font-size-lg-150 px-4 px-md-5 py-2 shadow-sm" style="border-radius:30px">View on OpenSea</a>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
 
