Add ownly rewards collection

--- a/index.html
+++ b/index.html
@@ -94,16 +94,16 @@
 											</div>
 										</a>
 									</li>
-<!--									<li>-->
-<!--										<a href="http://ownlyio.dev-marketplace.test/?collection=ownly-rewards" class="dropdown-item collection-dropdown-item py-2" data-collection="ownly-rewards">-->
-<!--											<div class="d-flex align-items-center">-->
-<!--												<div class="pe-2">-->
-<!--													<img src="img/ownly/own-token.webp" width="22" />-->
-<!--												</div>-->
-<!--												<div>Ownly Rewards</div>-->
-<!--											</div>-->
-<!--										</a>-->
-<!--									</li>-->
+									<li>
+										<a href="http://ownlyio.dev-marketplace.test/?collection=rewards" class="dropdown-item collection-dropdown-item py-2" data-collection="rewards">
+											<div class="d-flex align-items-center">
+												<div class="pe-2">
+													<img src="img/ownly/own-token.webp" width="22" />
+												</div>
+												<div>Ownly Rewards</div>
+											</div>
+										</a>
+									</li>
 									<li>
 										<a href="http://ownlyio.dev-marketplace.test/?collection=the-mustachios" class="dropdown-item collection-dropdown-item py-2" data-collection="the-mustachios">
 											<div class="d-flex align-items-center">
@@ -430,6 +430,6 @@
 	<script src="js/fancybox/fancybox.umd.js"></script>
 	<script src="js/moment.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/jdenticon@3.1.0/dist/jdenticon.min.js" async integrity="sha384-VngWWnG9GS4jDgsGEUNaoRQtfBGiIKZTiXwm9KpgAeaRn6Y/1tAFiyXqSzqC8Ga/" crossorigin="anonymous"></script>
-	<script src="js/script.js?v=75" id="script"></script>
+	<script src="js/script.js?v=76" id="script"></script>
 </body>
 </html>
