Update view token page using metadata from Ownly API

--- a/artist.html
+++ b/artist.html
@@ -79,7 +79,7 @@
 					</div>
 					
 					<div class="">
-						<div class="neo-black font-size-240 mb-3">Mustache Boii</div>
+						<div class="neo-black font-size-240 mb-3">Boii Mustache</div>
 						
 						<div class="d-flex align-items-center mb-4 mb-md-5">
 							<div class="me-3">
