--- a/token.html
+++ b/token.html
@@ -16,8 +16,8 @@
 				</div>
 				<div class="d-flex align-items-center py-1 ps-3 add-to-favorites-container">
 					<div class="">
-						<button class="btn add-to-favorites p-0 m-0" data-status="0" style="width:24px; height:24px; border-radius:50%; box-shadow: none" disabled>
-							<i class="far fa-heart font-size-140 text-color-1"></i>
+						<button class="btn add-to-favorites p-0 m-0" data-status="0" style="width:24px; height:24px; border-radius:50%; box-shadow: none">
+							<i class="fa-heart font-size-140 text-color-1"></i>
 						</button>
 					</div>
 					<div class="ps-2 font-size-90 text-color-1 favorites-count">0</div>
