Add additional assets section for Mustachio transparent bg in view token page

--- a/token.html
+++ b/token.html
@@ -7,6 +7,14 @@
 				</a>
 				<img src="" class="d-none" id="token-original-image-preload" alt="Token" />
 			</div>
+			
+			<div class="card d-none mt-4" id="additional-assets-container">
+				<div class="card-header bg-color-18">Additional Assets</div>
+				<div class="card-body">
+					<a href="#" data-fancybox class="btn btn-custom-5 w-100" id="transparent-bg-mustachio" style="border-width:2px">Mustachio with Transparent Background</a>
+					<img src="" class="d-none" id="transparent-bg-mustachio-preload" alt="Token" />
+				</div>
+			</div>
 		</div>
 		
 		<div class="col-md-6 col-xxl-7 ps-lg-3 ps-xl-4 mt-4 mt-md-5">
@@ -134,7 +142,21 @@
 					</h2>
 					<div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
 						<div class="accordion-body">
-							Created by multimedia artist Eugene Oligo, our collaboration entitled Titans of Industry features the pioneers, entrepreneurs, and titans of the crypto space. This collection will surely help you recognize the big ones, their feats, and their impact on the blockchain world.
+							<div class="about-the-collection d-none" data-collection="titans-of-industry">
+								Created by multimedia artist Eugene Oligo, our collaboration entitled Titans of Industry features the pioneers, entrepreneurs, and titans of the crypto space. This collection will surely help you recognize the big ones, their feats, and their impact on the blockchain world.
+							</div>
+							<div class="about-the-collection d-none" data-collection="the-mustachios">
+								Boii Mustache, the artist behind these avatars, describes them as 100 mustached explorers living in a hidden, mysterious, and magical island called MustachioVerse. Each of these Mustachios lived and thrived for over a hundred years, waiting for their turn to tell their own unique tale of adventure. One day, ten brave Mustachios discovered a mysterious torn journal written by The Prospector — the first-ever Mustachio who conquered every possible feat in their universe. Stories have been told about his glory, but no one knows The Prospector’s identity. His Lost Diary mentioned that he discovered 9 valuable artifacts and a precious golden ‘stache — the key in solving the greatest mystery in the land: why do they all have a mustache?
+							</div>
+							<div class="about-the-collection d-none" data-collection="cryptosolitaire">
+								Digital playing card deck created by Filipino artist, Chen Naje, also known as @chenandink on Instagram. For the clubs, tropical leaves to represent summer is used. For the spades, Chen Naje used maple leaves as symbol for the fall season. For the diamonds, he used ice crystals to represent winter which somehow also look like raw diamonds. Lastly, flowers for the hearts to represent their bloom during spring.
+							</div>
+							<div class="about-the-collection d-none" data-collection="inkvadyrz">
+								The deck is made up of twenty Cryptoart cards composed of three categories: common, uncommon, rare, and legendary. The card’s category shows its rarity, value, and benefits. The legendary cards are priced higher than the rare and common cards. There are also only 2 legendary cards compared to 5 rare cards, 6 uncommon cards, and 7 common cards. Most importantly, owning a legendary card gives the collector the possibility to get the reward piece by getting 9 other cards in the collection.
+							</div>
+							<div class="about-the-collection d-none" data-collection="rewards">
+								The collection composes of Ownly rewards for Private Sale and IDO participants, and top collectors for both Mustachio and Inkvadyrz collections.
+							</div>
 						</div>
 					</div>
 				</div>
