Add newly deployed BSC marketplace contract

--- a/home.html
+++ b/home.html
@@ -88,6 +88,10 @@
 </div>
 
 <div class="bg-color-18">
+	<div class="bg-color-6 font-size-100 font-size-md-120 collection-section" data-collection="titans-of-industry">
+		<div class="container text-white text-center py-3">GET 20% DISCOUNTS ON PURCHASES USING OWN TOKEN AS PAYMENT ON NEWLY MINTED TITANS OF INDUSTRY TOKENS</div>
+	</div>
+	
 	<div class="container py-5">
 <!--		<div class="px-md-1 mb-5">-->
 <!--			<ul class="nav nav-pills nav-pills-custom-1 nav-justified">-->
