--- a/token.html
+++ b/token.html
@@ -9,7 +9,7 @@
 			</div>
 			
 			<div class="card d-none mt-4" id="additional-assets-container">
-				<div class="card-header bg-color-18">Additional Assets</div>
+				<div class="card-header bg-white font-size-90">Additional Assets</div>
 				<div class="card-body">
 					<a href="#" data-fancybox class="btn btn-custom-5 w-100" id="transparent-bg-mustachio" style="border-width:2px">Mustachio with Transparent Background</a>
 					<img src="" class="d-none" id="transparent-bg-mustachio-preload" alt="Token" />
@@ -51,7 +51,7 @@
 					<div class="font-size-200 font-size-md-250 neo-black token-price line-height-90"></div>
 				</div>
 				<div class="col-6 text-end">
-					<button class="btn btn-custom-2 font-size-110 font-size-md-120 neo-bold px-4 px-md-5 link create-market-sale-confirmation" style="border-radius:15px">OWN NOW</button>
+					<button class="btn btn-custom-2 font-size-110 font-size-md-120 neo-bold px-4 px-md-5 link create-market-sale" style="border-radius:15px">OWN NOW</button>
 				</div>
 			</div>
 			
