Update Mustachio collection articles

--- a/artist.html
+++ b/artist.html
@@ -102,6 +102,19 @@
 				
 				<div class="row">
 					<div class="col-md-4 pb-3 pb-md-0 mb-5">
+						<a href="https://medium.com/ownlyio/a-step-by-step-guide-on-how-to-mint-your-mustachio-74102d7b89be" target="_blank">
+							<div class="w-100 background-image-cover mb-3" style="padding-top:54%; background-image:url('img/articles/12.webp')"></div>
+						</a>
+						<div class="mb-3" style="height:56px">
+							<a href="https://medium.com/ownlyio/a-step-by-step-guide-on-how-to-mint-your-mustachio-74102d7b89be" class="neo-bold text-color-6 font-size-140 text-decoration-none link-blog" target="_blank">A Step-by-Step Guide on How to Mint Your Mustachio</a>
+						</div>
+						<div class="text-color-7 font-size-100 mb-4 overflow-hidden" style="height:58px">Our latest collection, The Mustachios, are composed of 100 mustached NFT avatars with unique individual stories and a collective tale of adventure with a maximum supply of 999 Mustachios. For interested NFT collectors out there, there are only 25 remaining Mustachios from the Genesis collection as of writing!</div>
+						<div>
+							<a href="https://medium.com/ownlyio/a-step-by-step-guide-on-how-to-mint-your-mustachio-74102d7b89be" target="_blank" class="btn btn-custom-2 px-3 font-size-90">Read more</a>
+						</div>
+					</div>
+					
+					<div class="col-md-4 pb-3 pb-md-0 mb-5">
 						<a href="https://medium.com/ownlyio/the-mustachios-first-nft-avatars-powered-by-ownly-e5314715bca7" target="_blank">
 							<div class="w-100 background-image-cover mb-3" style="padding-top:54%; background-image:url('img/articles/2.webp')"></div>
 						</a>
