Add Genesis Block collection

--- a/home.html
+++ b/home.html
@@ -87,6 +87,50 @@
 	</div>
 </div>
 
+<div class="position-relative header-collection d-none" data-collection="the-sages-rant-collectibles" style="min-height:calc(100vh - 80px); margin-top:80px; background-position:66% 50%">
+	<div class="d-flex w-100 py-4 background-image-cover" style="min-height:calc(100vh - 80px); background-image:url('img/bg/the-sages-rant-collectibles.webp')">
+		<div class="container">
+			<div class="d-flex h-100 align-items-end w-100" style="bottom:50px; left:20px">
+				<div class="row mb-5">
+					<div class="col-lg-7">
+						<div class="mb-4">
+							<img src="img/the-sages-rant-collectibles/text.webp" class="w-100" />
+						</div>
+						<div class="text-center">
+							<a href="#" target="_blank" class="btn btn-custom-11 font-size-100 font-size-sm-110 font-size-lg-150 px-4 px-md-5 py-2 shadow-sm" style="border-radius:30px">View on OpenSea</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="position-relative header-collection d-none" data-collection="genesis-block" style="min-height:calc(100vh - 80px); margin-top:80px; background-position:66% 50%">
+	<div class="d-flex w-100 py-4 background-image-cover" style="min-height:calc(100vh - 80px); background-image:url('img/genesis-block/bg.webp')">
+		<div class="container">
+			<div class="d-flex h-100 align-items-end w-100" style="bottom:50px; left:20px">
+				<div class="mb-5">
+					<div class="mb-5">
+						<div>
+							<span class="bg-color-20 text-white px-2 px-md-3 font-size-190 font-size-md-300 font-size-xl-400 neo-bold line-height-90">GENESIS BLOCK</span>
+						</div>
+						<div>
+							<span class="bg-color-20 text-white px-2 px-md-3 font-size-190 font-size-md-300 font-size-xl-400 neo-bold pb-1">NFT COLLECTION <span class="fst-italic">by Marso</span></span>
+						</div>
+						<div class="mt-4">
+							<span class="bg-white text-color-6 px-2 px-md-3 font-size-110 font-size-md-160 font-size-xl-200 neo-regular-italic pb-1">A 9-Piece Single-Edition NFT Collection</span>
+						</div>
+					</div>
+					<div class="">
+						<a href="#" target="_blank" class="btn btn-custom-12 font-size-100 font-size-sm-110 font-size-lg-150 px-4 px-md-5 py-2 shadow-sm" style="border-radius:30px">View on OpenSea</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
 <div class="bg-color-18">
 	<div class="bg-color-6 font-size-100 font-size-md-120 collection-section" data-collection="titans-of-industry">
 		<div class="container text-white text-center py-3">GET 20% DISCOUNTS ON PURCHASES USING OWN TOKEN AS PAYMENT ON NEWLY MINTED TITANS OF INDUSTRY TOKENS</div>
