--- a/index.html
+++ b/index.html
@@ -84,6 +84,16 @@
 										</a>
 									</li>
 									<li>
+										<a href="http://ownlyio.dev-marketplace.test/?collection=genesis-block" class="dropdown-item collection-dropdown-item py-2" data-collection="genesis-block">
+											<div class="d-flex align-items-center">
+												<div class="pe-2">
+													<img src="img/ownly/own-token.webp" width="22" />
+												</div>
+												<div>Genesis Block</div>
+											</div>
+										</a>
+									</li>
+									<li>
 										<a href="http://ownlyio.dev-marketplace.test/?collection=inkvadyrz" class="dropdown-item collection-dropdown-item py-2" data-collection="inkvadyrz">
 											<div class="d-flex align-items-center">
 												<div class="pe-2">
@@ -113,6 +123,16 @@
 											</div>
 										</a>
 									</li>
+<!--									<li>-->
+<!--										<a href="http://ownlyio.dev-marketplace.test/?collection=the-sages-rant-collectibles" class="dropdown-item collection-dropdown-item py-2" data-collection="the-sages-rant-collectibles">-->
+<!--											<div class="d-flex align-items-center">-->
+<!--												<div class="pe-2">-->
+<!--													<img src="img/ownly/own-token.webp" width="22" />-->
+<!--												</div>-->
+<!--												<div>The Sages Rant Collectibles</div>-->
+<!--											</div>-->
+<!--										</a>-->
+<!--									</li>-->
 									<li>
 										<a href="http://ownlyio.dev-marketplace.test/?collection=titans-of-industry" class="dropdown-item collection-dropdown-item py-2" data-collection="titans-of-industry">
 											<div class="d-flex align-items-center">
@@ -518,6 +538,6 @@
 	<script src="js/fancybox/fancybox.umd.js"></script>
 	<script src="js/moment.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/jdenticon@3.1.0/dist/jdenticon.min.js" async integrity="sha384-VngWWnG9GS4jDgsGEUNaoRQtfBGiIKZTiXwm9KpgAeaRn6Y/1tAFiyXqSzqC8Ga/" crossorigin="anonymous"></script>
-	<script src="js/script.js?v=3.0.6" id="script"></script>
+	<script src="js/script.js?v=3.0.8" id="script"></script>
 </body>
 </html>
