Update OpenSea link for Genesis Block collection

--- a/home.html
+++ b/home.html
@@ -123,7 +123,7 @@
 						</div>
 					</div>
 					<div class="">
-						<a href="#" target="_blank" class="btn btn-custom-12 font-size-100 font-size-sm-110 font-size-lg-150 px-4 px-md-5 py-2 shadow-sm" style="border-radius:30px">View on OpenSea</a>
+						<a href="https://opensea.io/collection/marsogenesisblock" target="_blank" class="btn btn-custom-12 font-size-100 font-size-sm-110 font-size-lg-150 px-4 px-md-5 py-2 shadow-sm" style="border-radius:30px">View on OpenSea</a>
 					</div>
 				</div>
 			</div>
